--- a/main.html
+++ b/main.html
@@ -25,12 +25,12 @@
 		})();
 	</script>
 	<meta content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" name="robots">
-	<title>Web Du Lịch Đà Nẵng - Tất tần tật thông tin về du lịch Đà Nẵng</title>
+	<title>Hoàn Kiếm có gì ? - Tất tần tật thông tin về du lịch Đà Nẵng</title>
 	<link
 		href="https://fonts.googleapis.com/css?family=Montserrat%3A400%2C700%7CBangers%7CLato%3A300%2C400%7CAnton%3A400%7CRoboto%20Slab%3A400%7CNunito%3A700%7CUbuntu%20Condensed%3Aregular%7CRoboto%20Condensed%3A300%2C300italic%2Cregular%2Citalic%2C700%2C700italic&amp;subset=vietnamese%2Clatin%2Clatin-ext,latin%2Cvietnamese&amp;display=swap"
 		rel="stylesheet" />
 	<meta
-		content="Web Du Lịch Đà Nẵng hàng đầu tại miền Trung về tour du lịch Đà Nẵng, khách sạn Đà Nẵng, phượt Đà Nẵng, thông tin về du lịch Đà Nẵng giá rẻ"
+		content="Hoàn Kiếm có gì ? hàng đầu tại miền Trung về tour du lịch Đà Nẵng, khách sạn Đà Nẵng, phượt Đà Nẵng, thông tin về du lịch Đà Nẵng giá rẻ"
 		name="description" />
 	<link href="#" rel="canonical" />
 	<meta content="Est. reading time" name="twitter:label1" />
@@ -361,38 +361,6 @@
 <body class="home page-template page-template-templates page-template-template-full-width page-template-templatestemplate-full-width-php page page-id-199 wpb-js-composer js-comp-ver-6.9.0 vc_responsive">
 	<div class="layer"></div>
 	<header class="plain">
-		<!-- <div id="top_line">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 col-sm-6 col-xs-6"><i class="icon-phone"></i><strong>HOTLINE:</strong><a
-							href="call:+84934579759" style="color:#fff; font-size: 13px;"><b> +84 934 579 759</b></a> |
-						<a href="#" rel="nofollow" style="color:#0083ff"
-							target="_blank" title="iMessage"> iMessage <img alt="Imessage"
-								src="/images/imessage.png" style="display:inline-block"
-								title="iMessage" /></a><a href="viber://forward?text=Hi%20WDLDN!" rel="nofollow"
-							style="color:#8a40a0" target="_blank" title="Viber Me"><span class="essb_network_name">
-								Viber <img alt="Viber" src="/images/viber.png"
-									style="display:inline-block" title="Viber" /></span></a><a
-							href="#" rel="nofollow" style="color:#028aff" target="_self"
-							title="Zalo Call"> Zalo <img alt="Zalo" src="/images/zalo.png"
-								style="display:inline-block" title="Zalo" /></a><a
-							href="#" rel="nofollow" style="color:#00bb27"
-							target="_blank" title="WhatsApp Us"> Whatsapp <img alt="WhatsApp"
-								src="/images/phone.png" style="display:inline-block"
-								title="WhatsApp" /></a></div> -->
-					<!-- <div class="col-md-6 col-sm-6 col-xs-6">
-						<ul id="top_links">
-							<li>
-								<a href="https://webdulichdanang.com/login">Đăng nhập</a>
-							</li>
-
-							<li><a class="" href="https://webdulichdanang.com/wishlist" id="wishlist_link">Danh sách</a>
-							</li>
-						</ul>
-					</div> -->
-				<!-- </div>End row -->
-			<!-- </div>End container -->
-		<!-- </div>End top line -->
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-sm-3 col-xs-3">
@@ -504,7 +472,7 @@
 							data-voffset="-47" data-width="['auto']" data-x="center" data-y="center"
 							id="slide-9-layer-1"
 							style="z-index: 5; white-space: nowrap; font-size: 45px; font-weight: 400; letter-spacing: px;font-family:Anton;cursor:pointer;">
-							WEB DU LỊCH ĐÀ NẴNG </div>
+							Hoàn Kiếm có gì ?</div>
 						<!-- LAYER NR. 2 -->
 						<div class="tp-caption News-Title tp-resizeme"
 							data-frames='[{"delay":2130,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -513,7 +481,7 @@
 							data-responsive_offset="on" data-textalign="['left','left','left','left']" data-type="text"
 							data-voffset="17" data-width="['auto']" data-x="center" data-y="center" id="slide-9-layer-5"
 							style="z-index: 6; white-space: nowrap; font-size: 30px; color: #ffffff; letter-spacing: 0px;cursor:pointer;">
-							Khám phá vẻ đẹp vô tận của Đà Nẵng </div>
+							Để chúng tôi cho bạn thấy </div>
 						<!-- LAYER NR. 3 -->
 						<div class="tp-caption News-Title tp-resizeme"
 							data-frames='[{"delay":2740,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -522,7 +490,7 @@
 							data-responsive_offset="on" data-textalign="['left','left','left','left']" data-type="text"
 							data-voffset="56" data-width="['auto']" data-x="center" data-y="center" id="slide-9-layer-9"
 							style="z-index: 7; white-space: nowrap; font-size: 25px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Nunito;cursor:pointer;">
-							Discover the endless beauty of Da Nang </div>
+							Discover the endless beauty of Hoan Kiem </div>
 						<!-- LAYER NR. 4 -->
 						<div class="tp-caption rev-btn rev-hiddenicon"
 							data-frames='[{"delay":3430,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(0,0,0,1);bg:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
@@ -557,7 +525,7 @@
 							data-voffset="-47" data-width="['auto']" data-x="center" data-y="center"
 							id="slide-1-layer-1"
 							style="z-index: 5; white-space: nowrap; font-size: 45px; font-weight: 400; letter-spacing: px;font-family:Anton;cursor:pointer;">
-							WEB DU LỊCH ĐÀ NẴNG </div>
+							Hoàn Kiếm có gì ? </div>
 						<!-- LAYER NR. 6 -->
 						<div class="tp-caption News-Title tp-resizeme"
 							data-frames='[{"delay":2130,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -566,7 +534,7 @@
 							data-responsive_offset="on" data-textalign="['left','left','left','left']" data-type="text"
 							data-voffset="17" data-width="['auto']" data-x="center" data-y="center" id="slide-1-layer-5"
 							style="z-index: 6; white-space: nowrap; font-size: 30px; color: #ffffff; letter-spacing: 0px;cursor:pointer;">
-							Khám phá vẻ đẹp vô tận của Đà Nẵng </div>
+							Để chúng tôi cho bạn thấy</div>
 						<!-- LAYER NR. 7 -->
 						<div class="tp-caption News-Title tp-resizeme"
 							data-frames='[{"delay":2740,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -575,17 +543,8 @@
 							data-responsive_offset="on" data-textalign="['left','left','left','left']" data-type="text"
 							data-voffset="56" data-width="['auto']" data-x="center" data-y="center" id="slide-1-layer-9"
 							style="z-index: 7; white-space: nowrap; font-size: 25px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Nunito;cursor:pointer;">
-							Discover the endless beauty of Da Nang </div>
+							Discover the endless beauty of Hoan Kiem </div>
 						<!-- LAYER NR. 8 -->
-						<div class="tp-caption rev-btn rev-hiddenicon"
-							data-frames='[{"delay":3430,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(0,0,0,1);bg:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
-							data-height="['auto']" data-hoffset="" data-paddingbottom="[10,10,10,10]"
-							data-paddingleft="[30,30,30,30]" data-paddingright="[30,30,30,30]"
-							data-paddingtop="[10,10,10,10]" data-responsive="off" data-responsive_offset="on"
-							data-textalign="['left','left','left','left']" data-type="button" data-voffset="120"
-							data-width="['auto']" data-x="center" data-y="center" id="slide-1-layer-7"
-							style="z-index: 8; white-space: nowrap; font-size: 14px; line-height: 14px; font-weight: 700; color: rgba(255,255,255,1); letter-spacing: px;font-family:Nunito;text-transform:uppercase;background-color:rgba(255, 137, 0, 0.75);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;letter-spacing:1px;cursor:pointer;">
-							BOOK TOUR <i class="fa-icon-chevron-right"></i> </div>
 					</li>
 					<!-- SLIDE  -->
 					<li data-description="" data-easein="default" data-easeout="default" data-hideafterloop="0"
@@ -610,7 +569,7 @@
 							data-voffset="-47" data-width="['auto']" data-x="center" data-y="center"
 							id="slide-7-layer-1"
 							style="z-index: 5; white-space: nowrap; font-size: 45px; font-weight: 400; letter-spacing: px;font-family:Anton;cursor:pointer;">
-							WEB DU LỊCH ĐÀ NẴNG </div>
+							Hoàn Kiếm có gì ? </div>
 						<!-- LAYER NR. 10 -->
 						<div class="tp-caption News-Title tp-resizeme"
 							data-frames='[{"delay":2130,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -619,7 +578,7 @@
 							data-responsive_offset="on" data-textalign="['left','left','left','left']" data-type="text"
 							data-voffset="17" data-width="['auto']" data-x="center" data-y="center" id="slide-7-layer-5"
 							style="z-index: 6; white-space: nowrap; font-size: 30px; color: #ffffff; letter-spacing: 0px;cursor:pointer;">
-							Khám phá vẻ đẹp vô tận của Đà Nẵng </div>
+							Để chúng tôi cho bạn thấy</div>
 						<!-- LAYER NR. 11 -->
 						<div class="tp-caption News-Title tp-resizeme"
 							data-frames='[{"delay":2740,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -628,17 +587,8 @@
 							data-responsive_offset="on" data-textalign="['left','left','left','left']" data-type="text"
 							data-voffset="56" data-width="['auto']" data-x="center" data-y="center" id="slide-7-layer-9"
 							style="z-index: 7; white-space: nowrap; font-size: 25px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Nunito;cursor:pointer;">
-							Discover the endless beauty of Da Nang </div>
+							Discover the endless beauty of Hoan Kiem </div>
 						<!-- LAYER NR. 12 -->
-						<div class="tp-caption rev-btn rev-hiddenicon"
-							data-frames='[{"delay":3430,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(0,0,0,1);bg:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
-							data-height="['auto']" data-hoffset="" data-paddingbottom="[10,10,10,10]"
-							data-paddingleft="[30,30,30,30]" data-paddingright="[30,30,30,30]"
-							data-paddingtop="[10,10,10,10]" data-responsive="off" data-responsive_offset="on"
-							data-textalign="['left','left','left','left']" data-type="button" data-voffset="120"
-							data-width="['auto']" data-x="center" data-y="center" id="slide-7-layer-7"
-							style="z-index: 8; white-space: nowrap; font-size: 14px; line-height: 14px; font-weight: 700; color: rgba(255,255,255,1); letter-spacing: px;font-family:Nunito;text-transform:uppercase;background-color:rgba(255, 137, 0, 0.75);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;letter-spacing:1px;cursor:pointer;">
-							BOOK TOUR <i class="fa-icon-chevron-right"></i> </div>
 					</li>
 					<!-- SLIDE  -->
 					<li data-description="" data-easein="default" data-easeout="default" data-hideafterloop="0"
@@ -663,7 +613,7 @@
 							data-voffset="-47" data-width="['auto']" data-x="center" data-y="center"
 							id="slide-8-layer-1"
 							style="z-index: 5; white-space: nowrap; font-size: 45px; font-weight: 400; letter-spacing: px;font-family:Anton;cursor:pointer;">
-							WEB DU LỊCH ĐÀ NẴNG </div>
+							Hoàn Kiếm có gì ? </div>
 						<!-- LAYER NR. 14 -->
 						<div class="tp-caption News-Title tp-resizeme"
 							data-frames='[{"delay":2130,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -672,7 +622,7 @@
 							data-responsive_offset="on" data-textalign="['left','left','left','left']" data-type="text"
 							data-voffset="17" data-width="['auto']" data-x="center" data-y="center" id="slide-8-layer-5"
 							style="z-index: 6; white-space: nowrap; font-size: 30px; color: #ffffff; letter-spacing: 0px;cursor:pointer;">
-							Khám phá vẻ đẹp vô tận của Đà Nẵng </div>
+							Để chúng tôi cho bạn thấy</div>
 						<!-- LAYER NR. 15 -->
 						<div class="tp-caption News-Title tp-resizeme"
 							data-frames='[{"delay":2740,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -681,17 +631,8 @@
 							data-responsive_offset="on" data-textalign="['left','left','left','left']" data-type="text"
 							data-voffset="56" data-width="['auto']" data-x="center" data-y="center" id="slide-8-layer-9"
 							style="z-index: 7; white-space: nowrap; font-size: 25px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Nunito;cursor:pointer;">
-							Discover the endless beauty of Da Nang </div>
+							Discover the endless beauty of Hoan Kiem </div>
 						<!-- LAYER NR. 16 -->
-						<div class="tp-caption rev-btn rev-hiddenicon"
-							data-frames='[{"delay":3430,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(0,0,0,1);bg:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
-							data-height="['auto']" data-hoffset="" data-paddingbottom="[10,10,10,10]"
-							data-paddingleft="[30,30,30,30]" data-paddingright="[30,30,30,30]"
-							data-paddingtop="[10,10,10,10]" data-responsive="off" data-responsive_offset="on"
-							data-textalign="['left','left','left','left']" data-type="button" data-voffset="120"
-							data-width="['auto']" data-x="center" data-y="center" id="slide-8-layer-7"
-							style="z-index: 8; white-space: nowrap; font-size: 14px; line-height: 14px; font-weight: 700; color: rgba(255,255,255,1); letter-spacing: px;font-family:Nunito;text-transform:uppercase;background-color:rgba(255, 137, 0, 0.75);border-color:rgba(0,0,0,1);border-radius:30px 30px 30px 30px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;letter-spacing:1px;cursor:pointer;">
-							BOOK TOUR <i class="fa-icon-chevron-right"></i> </div>
 					</li>
 				</ul>
 				<script>
@@ -946,7 +887,7 @@
 											</a>
 										</div>
 										<div class="hotel_title">
-											<h3>Art Hotel Da Nang</h3>
+											<h3>Art Hotel Hoan Kiem</h3>
 											<div class="rating">
 												<i class="icon-star voted"></i><i class="icon-star voted"></i><i
 													class="icon-star voted"></i><i class="icon-star-empty"></i><i
@@ -1024,7 +965,7 @@
 											</a>
 										</div>
 										<div class="hotel_title">
-											<h3>A La Carte Da Nang Beach</h3>
+											<h3>A La Carte Hoan Kiem Beach</h3>
 											<div class="rating">
 												<i class="icon-star voted"></i><i class="icon-star voted"></i><i
 													class="icon-star voted"></i><i class="icon-star voted"></i><i
@@ -1385,7 +1326,7 @@
 					<div class="small-box widget_text" id="text-2">
 						<h3 class="widgettitle">VỀ CHÚNG TÔI</h3>
 						<div class="textwidget">
-							<p><b><strong>Web Du Lịch Đà Nẵng<br />
+							<p><b><strong>Hoàn Kiếm có gì ?<br />
 									</strong></b><em>“Khám phá vẻ đẹp vô tận của Đà Nẵng</em><br />
 								<em>Discover the endless beauty of Da Nang”<br />
 							</p>
@@ -1490,8 +1431,8 @@
 							<li><a href="https://www.youtube.com/@webdulichdanang"><i class="icon-youtube-play"></i></a>
 							</li>
 						</ul>
-						<p>© Web Du Lịch Đà Nẵng 2017 - 2024 Phát triển bởi <a href="https://www.webdulichdanang.com/"
-								id="sd"> Web Du Lịch Đà Nẵng</a>
+						<p>© Hoàn Kiếm có gì ? 2017 - 2024 Phát triển bởi <a href="https://www.webdulichdanang.com/"
+								id="sd"> Hoàn Kiếm có gì ?</a>
 						</p>
 					</div>
 				</div>
